mychart/templates/deployment.yaml
# App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-frontend
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-frontend
  template:
    metadata:
      labels:
        app: resume-builder-frontend
    spec:
      containers:
        - name: client
          image: fancyvanilla/resume-builder-frontend:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-builder-backend
  template:
    metadata:
      labels:
        app: resume-builder-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker-node-1
      containers:
        - name: server
          image: fancyvanilla/resume-builder-backend:v1
          imagePullPolicy: Never
          volumeMounts:
            - name: uploads
              mountPath: /uploads
          ports:
            - containerPort: 4000
      restartPolicy: Always
      volumes:
        - name: uploads
          hostPath:
            path: /mnt/data/uploads
            type: DirectoryOrCreate
