mychart/templates/service.yaml
# Service for Frontend
apiVersion: v1
kind: Service
metadata:
  name: resume-frontend-service
spec:
  selector:
    app: resume-builder-frontend
  ports:
    - name: frontend
      port: 80
      targetPort: 80
      protocol: TCP

---
# Service for Backend
apiVersion: v1
kind: Service
metadata:
  name: resume-backend-service
spec:
  selector:
    app: resume-builder-backend
  ports:
    - name: backend
      port: 4000
      targetPort: 4000
      protocol: TCP
